[gd_scene load_steps=5 format=3 uid="uid://b1ta8y2077onx"]

[ext_resource type="Script" path="res://menus/victory_screen.gd" id="1_v2ysd"]

[sub_resource type="LabelSettings" id="LabelSettings_60yq4"]
font_color = Color(0.0941176, 0.0941176, 0.0941176, 1)

[sub_resource type="LabelSettings" id="LabelSettings_q47jw"]
font_size = 10
font_color = Color(0.0941176, 0.0941176, 0.0941176, 1)

[sub_resource type="LabelSettings" id="LabelSettings_p8jk1"]
font_size = 6
font_color = Color(0.0941176, 0.0941176, 0.0941176, 1)

[node name="VictoryScreen" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.717647, 1, 1, 1)
script = ExtResource("1_v2ysd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
alignment = 1

[node name="YouWon" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "You Won!"
label_settings = SubResource("LabelSettings_60yq4")
horizontal_alignment = 1

[node name="Summary" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Summary"
label_settings = SubResource("LabelSettings_q47jw")
horizontal_alignment = 1

[node name="SummaryData" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "You defeated PLACEHOLDER TEXT"
label_settings = SubResource("LabelSettings_p8jk1")
horizontal_alignment = 1

[node name="SummaryData2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "You went up a level and got new stats and skills"
label_settings = SubResource("LabelSettings_p8jk1")
horizontal_alignment = 1

[node name="StatIncreases" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Stat Increases"
label_settings = SubResource("LabelSettings_q47jw")
horizontal_alignment = 1

[node name="StatData" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Slot1: +1 Ingress, +1 Incursion +1, Refrain +1 Agility, +1"
label_settings = SubResource("LabelSettings_p8jk1")
horizontal_alignment = 1

[node name="NewSkills" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "New Skills"
label_settings = SubResource("LabelSettings_q47jw")
horizontal_alignment = 1

[node name="SkillsData" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Slot 1: Mult Eth Incursion, Eth Refrain (medium)"
label_settings = SubResource("LabelSettings_p8jk1")
horizontal_alignment = 1
autowrap_mode = 3

[node name="NextBattle" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 8
text = "Start Next Battle"

[connection signal="pressed" from="VBoxContainer/NextBattle" to="." method="_on_next_battle_pressed"]
